--- a/error.html
+++ b/error.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="preload" href="./assets/fonts/icons.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 		<link rel="shortcut icon" href="./assets/img/favicon.ico">
-		<title>Профіль</title>
+		<title>404</title>
 		<script type="module" crossorigin="" src="./js/app.min.js?v=1755700027048"></script>
 		<link rel="stylesheet" crossorigin="" href="./css/app.min.css?v=1755700027048">
 	</head>
@@ -713,261 +713,19 @@
 				</div>
 			</div>
 			<main class="page">
-				<div class="page__profile profile">
-					<div class="profile__container">
-						<div class="profile__breadcrumbs breadcrumbs">
-							<ul>
-								<li>
-									<a href="#">Головна</a>
-								</li>
-								<li>
-									<a href="#">Кабінет</a>
-								</li>
-							</ul>
+				<section class="page__error error">
+					<div class="error__container">
+						<div class="error__icon">
+							<svg xmlns="http://www.w3.org/2000/svg" width="327" height="190" viewbox="0 0 327 190" fill="none">
+								<path d="M35.072 153V127.528H4.096V112.424L31.104 49.32H51.712V113.448H62.336V127.528H51.712V153H35.072ZM18.944 113.448H35.072V68.392L18.944 113.448Z" fill="var(--text-color)"></path>
+								<path fill-rule="evenodd" clip-rule="evenodd" d="M237.977 106.653L183.607 51.9122L195.186 40.2681L175.065 20L120.696 74.7411L109.131 63.0692L89 83.3374L143.369 138.078L131.791 149.732L151.921 170L206.291 115.259L217.869 126.917L238 106.649L237.977 106.653ZM163.486 117.787L140.84 94.9814L163.486 72.1804L186.137 94.9814L163.486 117.787Z" fill="var(--color, #111)"></path>
+								<path d="M297.072 153V127.528H266.096V112.424L293.104 49.32H313.712V113.448H324.336V127.528H313.712V153H297.072ZM280.944 113.448H297.072V68.392L280.944 113.448Z" fill="var(--text-color)"></path>
+							</svg>
 						</div>
-						<h1 class="profile__title">Андрій Х.</h1>
-						<div class="profile__wrapper">
-							<div data-fls-spoilers="767.98, max" class="profile__aside">
-								<details>
-									<summary>
-										Особистий кабінет
-										<div class="plus-icon"></div>
-									</summary>
-									<!-- , , -->
-									<div class="profile__menu">
-										<a href="profile-edit.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#user"></use>
-												</svg>
-											</div>
-											<span>Редагувати обліковий запис</span>
-										</a>
-										<a href="profile-pass.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#pass"></use>
-												</svg>
-											</div>
-											<span>Змінити пароль</span>
-										</a>
-										<a href="profile-addresses.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#location"></use>
-												</svg>
-											</div>
-											<span>Aдресна книга</span>
-										</a>
-										<a href="profile-addresses-add.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#location"></use>
-												</svg>
-											</div>
-											<span>Додати адресу</span>
-										</a>
-										<a href="profile-wishlist.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#heart"></use>
-												</svg>
-											</div>
-											<span>список бажаних товарів</span>
-										</a>
-										<a href="profile-wishlist-edit.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#heart"></use>
-												</svg>
-											</div>
-											<span>список бажаних товарів (вибрати)</span>
-										</a>
-										<a href="profile-news.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#news"></use>
-												</svg>
-											</div>
-											<span>розсилка новин</span>
-										</a>
-										<a href="profile-wait.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#wait"></use>
-												</svg>
-											</div>
-											<span>товари, які я очікую</span>
-										</a>
-										<a href="profile-history.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#history"></use>
-												</svg>
-											</div>
-											<span>історія замовлень</span>
-										</a>
-										<a href="profile-downloads.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#download"></use>
-												</svg>
-											</div>
-											<span>завантаження</span>
-										</a>
-										<a href="profile-bonuses.html" class="profile__menu-item --active">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#gem"></use>
-												</svg>
-											</div>
-											<span>Бонусні бали</span>
-										</a>
-										<a href="profile-refund.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#back"></use>
-												</svg>
-											</div>
-											<span>Запити на повернення</span>
-										</a>
-										<a href="profile-payments.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#menu"></use>
-												</svg>
-											</div>
-											<span>Транзакції</span>
-										</a>
-										<a href="profile-sub.html" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#plus"></use>
-												</svg>
-											</div>
-											<span>Регулярні платежі</span>
-										</a>
-										<a href="#" class="profile__menu-item">
-											<div class="profile__menu-icon">
-												<svg>
-													<use xlink:href="./assets/img/profile-menu-icons.svg#logout"></use>
-												</svg>
-											</div>
-											<span>Вийти</span>
-										</a>
-									</div>
-								</details>
-							</div>
-							<div class="profile__body">
-								<div class="profile__fields-block profile__fields-block--big fields-block">
-									<h3 class="fields-block__title">Бонусні бали</h3>
-									<div class="fields-block__bonuses bonuses-profile">
-										<div class="bonuses-profile__header">
-											<h4 class="bonuses-profile__title">Загальна кількість Ваших бонусних балів</h4>
-											<div class="bonuses-profile__count">53</div>
-										</div>
-										<div data-fls-showmore="items" class="bonuses-profile__table">
-											<div class="bonuses-profile__head">
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label">Дата додавання</div>
-													<div class="bonuses-profile__label">Опис</div>
-													<div class="bonuses-profile__label">Бали</div>
-												</div>
-											</div>
-											<div data-fls-showmore-content="7" class="bonuses-profile__body">
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Дата додавання</div>
-													<div class="bonuses-profile__label">11.07.2025</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Опис</div>
-													<div class="bonuses-profile__label bonuses-profile__label--thin">За замовлення на суму 2 000 ₴</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Бали</div>
-													<div class="bonuses-profile__label bonuses-profile__label--bold">2</div>
-												</div>
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Дата додавання</div>
-													<div class="bonuses-profile__label">11.07.2025</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Опис</div>
-													<div class="bonuses-profile__label bonuses-profile__label--thin">За замовлення на суму 2 000 ₴</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Бали</div>
-													<div class="bonuses-profile__label bonuses-profile__label--bold">2</div>
-												</div>
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Дата додавання</div>
-													<div class="bonuses-profile__label">11.07.2025</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Опис</div>
-													<div class="bonuses-profile__label bonuses-profile__label--thin">За замовлення на суму 2 000 ₴</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Бали</div>
-													<div class="bonuses-profile__label bonuses-profile__label--bold">2</div>
-												</div>
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Дата додавання</div>
-													<div class="bonuses-profile__label">11.07.2025</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Опис</div>
-													<div class="bonuses-profile__label bonuses-profile__label--thin">За замовлення на суму 2 000 ₴</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Бали</div>
-													<div class="bonuses-profile__label bonuses-profile__label--bold">2</div>
-												</div>
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Дата додавання</div>
-													<div class="bonuses-profile__label">11.07.2025</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Опис</div>
-													<div class="bonuses-profile__label bonuses-profile__label--thin">За замовлення на суму 2 000 ₴</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Бали</div>
-													<div class="bonuses-profile__label bonuses-profile__label--bold">2</div>
-												</div>
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Дата додавання</div>
-													<div class="bonuses-profile__label">11.07.2025</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Опис</div>
-													<div class="bonuses-profile__label bonuses-profile__label--thin">За замовлення на суму 2 000 ₴</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Бали</div>
-													<div class="bonuses-profile__label bonuses-profile__label--bold">2</div>
-												</div>
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Дата додавання</div>
-													<div class="bonuses-profile__label">11.07.2025</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Опис</div>
-													<div class="bonuses-profile__label bonuses-profile__label--thin">За замовлення на суму 2 000 ₴</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Бали</div>
-													<div class="bonuses-profile__label bonuses-profile__label--bold">2</div>
-												</div>
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Дата додавання</div>
-													<div class="bonuses-profile__label">11.07.2025</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Опис</div>
-													<div class="bonuses-profile__label bonuses-profile__label--thin">За замовлення на суму 2 000 ₴</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Бали</div>
-													<div class="bonuses-profile__label bonuses-profile__label--bold">2</div>
-												</div>
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Дата додавання</div>
-													<div class="bonuses-profile__label">11.07.2025</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Опис</div>
-													<div class="bonuses-profile__label bonuses-profile__label--thin">За замовлення на суму 2 000 ₴</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Бали</div>
-													<div class="bonuses-profile__label bonuses-profile__label--bold">2</div>
-												</div>
-												<div class="bonuses-profile__row">
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Дата додавання</div>
-													<div class="bonuses-profile__label">11.07.2025</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Опис</div>
-													<div class="bonuses-profile__label bonuses-profile__label--thin">За замовлення на суму 2 000 ₴</div>
-													<div class="bonuses-profile__label bonuses-profile__label--mobile">Бали</div>
-													<div class="bonuses-profile__label bonuses-profile__label--bold">2</div>
-												</div>
-											</div>
-											<button hidden data-fls-showmore-button="" type="button" class="bonuses-profile__more">
-												<span>Показати
-          всі</span>
-												<span>Сховати</span>
-											</button>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
+						<h1 class="error__title">Сторінку не знайдено</h1>
+						<a href="#" class="error__link">На головну</a>
 					</div>
-				</div>
+				</section>
 			</main>
 			<footer data-fls-footer="" class="footer">
 				<div class="footer__top">
